<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">


    <CheckBox
        android:id="@+id/dont_ring_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_ring_checkbox" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/startTimepickerButton"
        android:text="@string/startTimePickerButton"
        android:onClick="showTimePicker"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/endTimepickerButton"
        android:text="@string/endTimePickerButton"
        android:onClick="showTimePicker"/>




    <CheckBox
        android:id="@+id/send_sms_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Send SMS After Rejecting Call"
        />

    <EditText
        android:id="@+id/sms_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/sms_textview"
        android:visibility="gone"/>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        android:onClick="saveSMSSharedPreferences"
        android:visibility="gone"/>

    <Button
        android:id = "@+id/white_list_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whitelist_button"
        android:onClick="showWhtieListEditText"
        />

    <Spinner
        android:id="@+id/white_list_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        />

    <Button
        android:id = "@+id/black_list_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blacklist_button"
        android:onClick="showBlackListEditText"
        />

    <Spinner
        android:id="@+id/black_list_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        />

</LinearLayout>
